--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.23.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "html-pdf": "^2.2.0"
+    "html-pdf": "^2.2.0",
+    "nodemon": "^2.0.14"
   }
 }
